# SOI

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  elem.h
src/: buffer.c  buffer.h  config.h  consumer.c  consumer.h  elem.c  elem.h  element.c  element.h  main.c  producer.c  producer.h  securePrint.c  securePrint.h  types.c  types.h
